--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,16 +10,23 @@
   <app-comment-list [comments]="comments" (onShowComment)="onShowComment($event)">
   </app-comment-list>
 </div> -->
-<!-- 
-<h2>Counter</h2>
-<app-counter #counter></app-counter> -->
-<!-- <button (click)="counter.increment()">++</button>
-<button (click)="counter.decrement()">--</button>
+
+<!-- <h2>Counter</h2>
+<app-counter #counter></app-counter>
+<div class="btn btn-primary" (click)="counter.increment()">
+  Increment
+</div>
+<div class="btn btn-danger" (dblclick)="counter.decrement()">
+  Decrement
+</div>
 <br>
 <br>
-<hr>
-<button (click)="counterComponent.increment()">++</button>
-<button (click)="counterComponent.decrement()">--</button> -->
+<div class="btn btn-primary" (click)="counterComponent.increment()">
+  Increment
+</div>
+<div class="btn btn-danger" (dblclick)="counterComponent.decrement()">
+  Decrement
+</div> -->
 
 <!-- <div class="container">
   <h2 class="text-center">TS Comments</h2>
@@ -31,9 +38,45 @@
   </div>
 </div> -->
 
-<div class="container">
+<!-- <div class="container">
   <h3 class="text-center">Book a Flight</h3>
   <div class="col-md-offset-3 col-md-6">
     <app-flight-form></app-flight-form>
   </div>
+</div> -->
+<div>
+  <nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li>
+            <a routerLink="/">Home</a>
+          </li>
+          <li>
+            <a routerLink="/about">About</a>
+          </li>
+          <li>
+            <a routerLink="/contact">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <div class="container">
+    <router-outlet></router-outlet>
+  </div>
 </div>
+<!-- <div class="container">
+  <div class="row">
+    <div class="col-md-6">
+      <h3 style="text-align:center" *appWhen="toggle">Hi, cute directive</h3>
+      <button appUiButton bgColor="red" (click)="updateToggle()">Click!!</button>
+      <h2>{{0.5 | percent}}</h2>
+    </div>
+    <div class="col-md-6">
+      <h3>{{'this is uppercase' | uppercase}}</h3>
+      <h2>{{50.989 | currency:'EUR':true}}</h2>
+      <h3>{{'watch me flip' | reverse:true}}</h3>
+    </div>
+  </div>
+</div> -->
