--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -50,16 +50,22 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
           <li>
-            <a routerLink="/">API Todos</a>
-          </li>
-          <li>
-            <a routerLink="/home">Home</a>
+            <a routerLink="/">Home</a>
           </li>
           <li>
             <a routerLink="/about">About</a>
           </li>
           <li>
             <a routerLink="/contact">Contact</a>
+          </li>
+          <li>
+            <a routerLink="/flight-form">Flight Booking</a>
+          </li>
+          <li>
+            <a routerLink="/comment-list">Comment List</a>
+          </li>
+          <li>
+            <a routerLink="/todos">API Todos</a>
           </li>
         </ul>
       </div>
