Login page added

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,3 +1,17 @@
 <p>
   about works!
 </p>
+
+  <!-- <div class="container">
+  <div class="row">
+    <div class="col-md-6">
+      <h3 style="text-align:center" *appWhen="toggle">Hi, cute directive</h3>
+      <button appUiButton bgColor="red" (click)="updateToggle()">Click!!</button>
+      <h2>{{0.5 | percent}}</h2>
+    </div>
+    <div class="col-md-6">
+      <h3>{{'this is uppercase' | uppercase}}</h3>
+      <h2>{{50.989 | currency:'EUR':true}}</h2>
+      <h3>{{'watch me flip' | reverse:true}}</h3>
+    </div>
+  </div> -->
