--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,3 +1,28 @@
 <p>
   contact works!
 </p>
+<!--Add tab component to app-->
+
+<!-- <div style="text-align:center">
+  <h1> This is parent component </h1>
+  <app-child></app-child>
+</div> -->
+
+<!-- <div>
+  <h2>Comments</h2>
+  <app-comment-list [comments]="comments" (onShowComment)="onShowComment($event)">
+  </app-comment-list>
+</div> -->
+
+
+
+<!-- <div class="container">
+  <h2 class="text-center">TS Comments</h2>
+  <div class="col-md-4 col-md-offset-2">
+    <app-comment-list></app-comment-list>
+  </div>
+  <div class="col-md-4">
+    <app-comment-detail></app-comment-detail>
+  </div>
+</div> -->
+
