--- a/src/app/counter/counter.component.html
+++ b/src/app/counter/counter.component.html
@@ -1,3 +1,19 @@
+<h2>Counter</h2>
+<div class="btn btn-primary" (click)="increment()">
+  Increment
+</div>
+<div class="btn btn-danger" (click)="decrement()">
+  Decrement
+</div>
+<br>
+<br>
+<!-- <div class="btn btn-primary" (click)="counterComponent.increment()">
+  Increment
+</div>
+<div class="btn btn-danger" (dblclick)="counterComponent.decrement()">
+  Decrement
+</div> -->
+
 <h5>
   {{counter}}
   </h5>
