--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,10 +5,7 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
           <li>
-            <a routerLink="/">Login</a>
-          </li>
-          <li>
-            <a routerLink="/home">Home</a>
+            <a routerLink="/">Home</a>
           </li>
           <li>
             <a routerLink="/about">About</a>
